# NocturneOS-base

./: .gitignore  CMakeLists.txt  Justfile  LICENSE  README.MD  bochs.cfg  compile_flags.txt  flake.nix  shell.nix  warning_count.txt
.github/workflows/: Nocturne-Auto.yml  Nocturne-Pull.yml  SayoriOS-AutoBot-Auto.yml
cmake/: Rust.cmake
iso/boot/grub/: grub.cfg
kernel/asm/: interrupt.s  link.ld  switch_task.s
kernel/include/: common.h  kernel.h  portability.h  version.h
kernel/include/arch/: bitops.h
kernel/include/desktop/: render.h  widget_button.h  widget_label.h  widget_progress.h
kernel/include/drv/: atapi.h  cmos.h  fpu.h  pci.h  ps2.h  psf.h  rtl8139.h  vfs_new.h
kernel/include/elf/: elf.h
kernel/include/fmt/: tga.h
kernel/include/fs/: fat12.h  fat32.h  fsm.h  iso9660.h  milla.h  nvfs.h  smfs.h  tarfs.h  tempfs.h
kernel/include/gfx/: intel.h
kernel/include/gui/: basics.h
kernel/include/io/: keyboard.h  logging.h  ports.h  rgb_image.h  screen.h  screen_new.h  serial_port.h  tty.h
kernel/include/lib/: asprintf.h  bitops.h  fileio.h  list.h  math.h  pixel.h  split.h  sprintf.h  stdio.h  stdlib.h  string.h  time_conversion.h
kernel/include/mem/: pmm.h  vmm.h
kernel/include/net/: ethernet.h  socket.h  stack.h  tcp.h
kernel/src/: kernel.c
other/: 41_nocturne
ramdisk/: Zeraora.txt  argdmp  args  bentho.tga  cal  calendar  clihlt  dao  dao2  empt  hello  hello-as  hello_world  inptest  input  keywatcher  loop  nl  nocscr  test.tga
ramdisk/ParallelData/: background.tga
rust/: Cargo.toml  armv7-unknown-none.json  i686-unknown-none.json
rust/.cargo/: config.toml
rust/eni-player/: Cargo.toml
rust/eni-player/src/: border_wrapped.rs  lib.rs  margin.rs  text_list.rs
rust/noct-alloc/: Cargo.toml
rust/noct-alloc/src/: lib.rs
rust/noct-audio/: Cargo.toml  build.rs
rust/noct-audio/src/: c_api.rs  lib.rs
rust/noct-diskman/: Cargo.toml  build.rs
rust/noct-diskman/src/: c_api.rs  generic_drive.rs  lib.rs  partition.rs  structures.rs
rust/noct-dpm/: Cargo.toml
rust/noct-dpm-sys/: Cargo.toml  build.rs
rust/noct-dpm-sys/src/: impls.rs  lib.rs
rust/noct-dpm/src/: lib.rs
rust/noct-elfloader/: Cargo.toml
rust/noct-elfloader/src/: ko_modules.rs  lib.rs
rust/noct-fatfs/: Cargo.toml  build.rs
rust/noct-fatfs/src/: lib.rs
rust/noct-fileio/: Cargo.toml  build.rs
rust/noct-fileio/src/: lib.rs
rust/noct-fs/: Cargo.toml  build.rs
rust/noct-fs-sys/: Cargo.toml  build.rs
rust/noct-fs-sys/src/: dir.rs  file.rs  impls.rs  lib.rs
rust/noct-fs/src/: lib.rs
rust/noct-fsm-sys/: Cargo.toml  build.rs
rust/noct-fsm-sys/src/: headers.rs  impls.rs  lib.rs
rust/noct-il/: Cargo.toml
rust/noct-il/src/: c_api.rs  lib.rs
rust/noct-input/: Cargo.toml  build.rs
rust/noct-input/src/: kbd.rs  lib.rs
rust/noct-interrupts/: Cargo.toml  build.rs
rust/noct-io/: Cargo.toml
rust/noct-io/src/: lib.rs
rust/noct-ipc/: Cargo.toml
rust/noct-ipc/src/: lib.rs  manager.rs
rust/noct-iso9660/: Cargo.toml  build.rs
rust/noct-iso9660/src/: lib.rs
rust/noct-klib/: Cargo.toml
rust/noct-klib/src/: lib.rs  string.rs
rust/noct-ksymparser/: Cargo.toml
rust/noct-ksymparser/src/: lib.rs
rust/noct-logger/: Cargo.toml
rust/noct-logger/src/: lib.rs
rust/noct-mbr/: Cargo.toml
rust/noct-mbr/examples/: parse.rs
rust/noct-mbr/src/: lib.rs
rust/noct-mem/: Cargo.toml
rust/noct-mem/src/: lib.rs
rust/noct-noctfs/: Cargo.toml  build.rs
rust/noct-noctfs/src/: disk_device.rs  lib.rs
rust/noct-nvfs/: Cargo.toml  build.rs
rust/noct-nvfs/src/: lib.rs
rust/noct-path/: Cargo.toml
rust/noct-path/src/: lib.rs  tests.rs
rust/noct-pci/: Cargo.toml  build.rs
rust/noct-pci/src/: c_api.rs  lib.rs
rust/noct-physmem/: Cargo.toml  build.rs
rust/noct-ps2/: Cargo.toml
rust/noct-ps2/src/: controller.rs  keyboard.rs  lib.rs
rust/noct-psf/: Cargo.toml
rust/noct-psf/src/: c_api.rs  lib.rs
rust/noct-sched/: Cargo.toml  build.rs
rust/noct-sched/src/: lib.rs
rust/noct-screen/: Cargo.toml  build.rs
rust/noct-screen/src/: c_api.rs  lib.rs  manager.rs  screen.rs
rust/noct-shell/: Cargo.toml
rust/noct-shell/src/: cat.rs  cd.rs  cls.rs  datetime.rs  dir.rs  disk_ctl.rs  disks.rs  file.rs  file_ops.rs  gfxinfo.rs  lib.rs  log.rs  mala.rs  meminfo.rs  mtrr.rs  pavi.rs  pci.rs  reboot.rs  sysinfo.rs
rust/noct-smbios/: Cargo.toml
rust/noct-smbios/src/: lib.rs
rust/noct-sys/: Cargo.toml
rust/noct-sys/src/: lib.rs  regs.rs  scheduler.rs  version.rs
rust/noct-tarfs/: Cargo.toml  build.rs
rust/noct-tarfs/src/: disk_device.rs  lib.rs
rust/noct-time/: Cargo.toml  build.rs
rust/noct-timer/: Cargo.toml
rust/noct-timer/src/: lib.rs
rust/noct-tools/: Cargo.toml
rust/noct-tools/src/: lib.rs  memory.rs
rust/noct-tty/: Cargo.toml  build.rs
rust/noct-tty/src/: c_api.rs  console.rs  lib.rs  renderer.rs
rust/noct-vfs/: Cargo.toml
rust/noct-vfs/examples/: testfs.rs
rust/noct-vfs/src/: lib.rs
rust/noct-zeraora/: Cargo.toml
rust/noct-zeraora/src/: lib.rs
rust/pavi/: Cargo.toml
rust/pavi/src/: lib.rs
rust/src/: lib.rs
rust/src/audio/: mod.rs
rust/src/drv/: fpu.rs  mod.rs
rust/src/drv/ps2/: controller.rs
rust/src/ffi/: tty.rs
rust/src/gfx/: mod.rs  point.rs
rust/src/gfx/font/: psf.rs
rust/src/shell/: cat.rs  cd.rs  cls.rs  datetime.rs  dir.rs  disk_ctl.rs  disks.rs  file.rs  file_ops.rs  gfxinfo.rs  log.rs  mala.rs  meminfo.rs  miniplay.rs  mkdir.rs  mod.rs  mtrr.rs  parallel_desktop.rs  pavi.rs  pci.rs  reboot.rs  sysinfo.rs
rust/src/std/: fs.rs  mod.rs  thread.rs  tty.rs
rust/src/std/io/: input.rs  mod.rs  rgb_image.rs  screen.rs
rust/src/std/lib/: pixel.rs
rust/src/std/mm/: allocator.rs  mod.rs
rust/src/system/: cpuid.rs  keyboard_buffer.rs  mem.rs  mod.rs  pci.rs  regs.rs  run_elf_file.rs  scheduler.rs  timer.rs  version.rs
rust/src/tty/: mod.rs
tools/: analyze.py  cloc.sh  compile_builds.sh  find_fixme_and_todo.sh  generate_warning_badge.sh  geninsert.sh  genmap.sh  install-sayori.sh  make_builds.sh  rust.sh  rust_test_all.sh  warnanalyzer.py
utils/chen/: Cargo.toml
(+226 files in other folders)
