[lib]
crate-type = [ "staticlib" ]

[package]
name = "nocturne"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = [ "noct-alloc", "noct-dpm-sys", "noct-fileio", "noct-fs", "noct-fs-sys", "noct-input", "noct-ipc", "noct-iso9660", "noct-logger", "noct-noctfs", "noct-path", "noct-physmem", "noct-psf", "noct-sched", "noct-screen" , "noct-smbios", "noct-tarfs", "noct-tty", "pavi"]

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.10.0"
x86 = "0.52.0"
noct-alloc = { path = "./noct-alloc" }
noct-fs-sys = { path = "./noct-fs-sys" }
noct-dpm-sys = { path = "./noct-dpm-sys" }
noct-logger = { path = "./noct-logger" }
noct-path = { path = "./noct-path" }
noct-iso9660 = { path = "./noct-iso9660" }
noct-screen = { path = "./noct-screen" }
raw-cpuid = "11.4.0"
elf = { version = "0.7.4", default-features = false }
noct-tarfs = { path = "./noct-tarfs" }
noct-fileio = { path = "./noct-fileio" }
pavi = { path = "./pavi" }
noct-fs = { path = "./noct-fs" }
noct-tty = { path = "./noct-tty" }
noct-input = { path = "./noct-input" }
noct-psf = { path = "./noct-psf" }
noct-noctfs = { path = "./noct-noctfs" }
noct-sched = { path = "./noct-sched" }
noct-ipc = { path = "./noct-ipc" }
noct-smbios = { path = "./noct-smbios" }

[profile.release]
panic = "abort"
lto = true
strip = true
opt-level = 2

[profile.release_no_opt]
inherits = "release"
opt-level = 0

[profile.dev]
panic = "abort"
strip = true
opt-level = 0
codegen-units = 1
