[lib]
crate-type = [ "staticlib" ]

[package]
name = "nocturne"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = [ "eni-player", "noct-alloc", "noct-audio", "noct-diskman", "noct-elfloader", "noct-fatfs", "noct-fileio", "noct-fs", "noct-fs-sys", "noct-il", "noct-input", "noct-interrupts", "noct-ipc", "noct-iso9660", "noct-ksymparser", "noct-logger", "noct-mbr", "noct-noctfs", "noct-nvfs", "noct-path", "noct-pci", "noct-physmem", "noct-ps2", "noct-psf", "noct-sched", "noct-screen" , "noct-smbios", "noct-tarfs", "noct-time", "noct-timer", "noct-tools", "noct-tty", "pavi", "noct-shell", "noct-io", "noct-mem", "noct-sys"]

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.10.0"
elf = { version = "0.7.4", default-features = false }
noct-alloc = { path = "./noct-alloc" }
noct-fs-sys = { path = "./noct-fs-sys" }
noct-logger = { path = "./noct-logger" }
noct-path = { path = "./noct-path" }
noct-iso9660 = { path = "./noct-iso9660" }
noct-screen = { path = "./noct-screen" }
noct-tarfs = { path = "./noct-tarfs" }
noct-fs = { path = "./noct-fs" }
noct-tty = { path = "./noct-tty" }
noct-input = { path = "./noct-input" }
noct-psf = { path = "./noct-psf" }
noct-noctfs = { path = "./noct-noctfs" }
noct-sched = { path = "./noct-sched" }
noct-ipc = { path = "./noct-ipc" }
noct-timer = { path = "./noct-timer" }
noct-elfloader = { path = "./noct-elfloader" }
noct-ksymparser = { path = "./noct-ksymparser" }
noct-audio = { path = "./noct-audio" }
noct-il = { path = "./noct-il" }
noct-fatfs = { path = "./noct-fatfs" }
noct-interrupts = { path = "./noct-interrupts" }
noct-time = { path = "./noct-time" }
noct-diskman = { path = "./noct-diskman" }
noct-nvfs = { path = "./noct-nvfs" }
noct-mem = { path = "./noct-mem" }

[target.'cfg(target_arch = "x86")'.dependencies]
x86 = "0.52.0"
raw-cpuid = "11.4.0"
noct-smbios = { path = "./noct-smbios" }
noct-pci = { path = "./noct-pci" }
noct-ps2 = { path = "./noct-ps2" }
noct-fileio = { path = "./noct-fileio" }
pavi = { path = "./pavi" }
eni-player = { path = "./eni-player" }
noct-shell = { path = "./noct-shell" }

[profile.release]
panic = "abort"
lto = true
strip = true
opt-level = 2

[profile.release_no_opt]
inherits = "release"
opt-level = 0

[profile.dev]
panic = "abort"
strip = true
lto = true
opt-level = 0
codegen-units = 1