[package]
name = "noct-diskman"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
num-derive = "0.4.2"
num-traits = { version = "0.2.19", default-features = false }

spin = "0.10.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

noct-logger = { path = "../noct-logger" }

[build-dependencies]
cbindgen = { version = "0.28.0", default-features = false }