[package]
name = "noct-iso9660"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
iso9660_simple = { version = "0.1.21", default-features = false }
noct-diskman = { path = "../noct-diskman" }
noct-fs-sys = { path = "../noct-fs-sys" }
noct-logger = { path = "../noct-logger" }

[build-dependencies]
cbindgen = { version = "0.29.0" }
