[package]
name = "noct-noctfs"
version = "0.1.0"
edition = "2024"

[dependencies]
noctfs = { git = "https://github.com/NDRAEY/noctfs", default-features=false }
noct-dpm-sys = { path = "../noct-dpm-sys" }
noct-fs-sys = { path = "../noct-fs-sys" }
noct-logger = { path = "../noct-logger" }
no_std_io = { version = "0.6.0", features = ["alloc"] }
