[package]
name = "noct-nvfs"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
noct-fs = { path = "../noct-fs" }
noct-fs-sys = { path = "../noct-fs-sys" }
noct-logger = { path = "../noct-logger" }

[build-dependencies]
cbindgen = { version = "0.28.0", default-features = false }
bindgen = { version = "0.71.1", default-features=false }