[package]
name = "noct-screen"
version = "0.1.0"
edition = "2021"

build = "build.rs"


[dependencies]
noct-logger = { path = "../noct-logger" }
spin = "0.5.2"

num-traits = { version = "0.2", default-features = false }
num-derive = { version = "0.4", default-features = false }

[build-dependencies]
bindgen = "0.71.1"
