[package]
name = "noct-tarfs"
version = "0.1.0"
edition = "2021"

[dependencies]
tarfs = { version = "0.2.4", default-features = false }
noct-diskman = { path = "../noct-diskman" }
noct-fs-sys = { path = "../noct-fs-sys" }
noct-logger = { path = "../noct-logger" }
noct-tools = { path = "../noct-tools" }
no_std_io = { version = "0.6.0", features = ["alloc"] }

[build-dependencies]
cbindgen = { version = "0.29.0" }
