[package]
name = "noct-tty"
version = "0.1.0"
edition = "2024"

build = "build.rs"

[dependencies]
lazy_static = "1.5.0"
spin = "0.10.0"
noct-screen = { path = "../noct-screen" }
noct-psf = { path = "../noct-psf" }
noct-logger = { path = "../noct-logger" }

[build-dependencies]
cbindgen = { version = "0.29.0", default-features = false }