[package]
name = "pavi"
version = "0.1.0"
edition = "2024"

[dependencies]
nimage = { version = "0.1.6", features = ["tga"], default-features = false }

noct-tty = { path = "../noct-tty" }
noct-fs = { path = "../noct-fs" }
noct-screen = { path = "../noct-screen" }
noct-input = { path = "../noct-input" }
noct-logger = { path = "../noct-logger" }

embedded-canvas = "0.3.1"
embedded-graphics = "0.8.1"
embedded-layout = "0.4.2"
